# bad_econ

./: Cargo.toml  output.csv
src/: main.rs  models.rs
