[package]
name = "badecon"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.15.2"
clap = { version = "4.5.18", features = ["derive"] }
polars = { version = "0.46.0", features = ["csv", "dtype-categorical", "lazy"] }
rand = "0.9.0"
csv = "1.3.1"
serde = { version = "1.0", features = ["derive",] }
strum = "0.27.0"
strum_macros = "0.27.0"